errorlog.txt

bandi@BS12 MINGW64 /c/megaladon
$ g++ -std=c++17 -Wall -Wextra -Isrc/ast -Isrc/builtins -Isrc/environment -Isrc/interpreter -Isrc/lexer -Isrc/parser -Isrc/types -Isrc/util src/ast/ast.cpp src/builtins/builtins.h src/builtins/core_function.cpp src/builtins/list_methods.cpp src/builtins/string_methods.cpp src/environment/environment.cpp src/interpreter/interpreter.cpp src/lexer/lexer.cpp src/parser/parser.cpp src/types/value.cpp src/util/error.cpp src/main.cpp -o megaladon.exe
In file included from src/ast/ast.cpp:1:
src/ast/ast.h: In constructor 'GetExpr::GetExpr(std::shared_ptr<Expr>, std::shared_ptr<Expr>)':
src/ast/ast.h:65:27: warning: 'GetExpr::index' will be initialized after [-Wreorder]
   65 |     std::shared_ptr<Expr> index; // For indexed access (e.g., list[idx])
      |                           ^~~~~
src/ast/ast.h:64:11: warning:   'Token GetExpr::name' [-Wreorder]
   64 |     Token name; // For property access (e.g., obj.prop)
      |           ^~~~
src/ast/ast.h:59:5: warning:   when initialized here [-Wreorder]
   59 |     GetExpr(std::shared_ptr<Expr> object, std::shared_ptr<Expr> index)
      |     ^~~~~~~
src/ast/ast.h: In constructor 'SetExpr::SetExpr(std::shared_ptr<Expr>, std::shared_ptr<Expr>, std::shared_ptr<Expr>)':
src/ast/ast.h:112:27: warning: 'SetExpr::value' will be initialized after [-Wreorder]
  112 |     std::shared_ptr<Expr> value;
      |                           ^~~~~
src/ast/ast.h:110:11: warning:   'Token SetExpr::name' [-Wreorder]
  110 |     Token name; // For property assignment
      |           ^~~~
src/ast/ast.h:105:5: warning:   when initialized here [-Wreorder]
  105 |     SetExpr(std::shared_ptr<Expr> object, std::shared_ptr<Expr> index, std::shared_ptr<Expr> value)
      |     ^~~~~~~
In file included from src/builtins/../interpreter/interpreter.h:7,
                 from src/builtins/core_function.cpp:3:
C:/megaladon/src/ast/ast.h: In constructor 'GetExpr::GetExpr(std::shared_ptr<Expr>, std::shared_ptr<Expr>)':
C:/megaladon/src/ast/ast.h:65:27: warning: 'GetExpr::index' will be initialized after [-Wreorder]
   65 |     std::shared_ptr<Expr> index; // For indexed access (e.g., list[idx])
      |                           ^~~~~
C:/megaladon/src/ast/ast.h:64:11: warning:   'Token GetExpr::name' [-Wreorder]
   64 |     Token name; // For property access (e.g., obj.prop)
      |           ^~~~
C:/megaladon/src/ast/ast.h:59:5: warning:   when initialized here [-Wreorder]
   59 |     GetExpr(std::shared_ptr<Expr> object, std::shared_ptr<Expr> index)
      |     ^~~~~~~
C:/megaladon/src/ast/ast.h: In constructor 'SetExpr::SetExpr(std::shared_ptr<Expr>, std::shared_ptr<Expr>, std::shared_ptr<Expr>)':
C:/megaladon/src/ast/ast.h:112:27: warning: 'SetExpr::value' will be initialized after [-Wreorder]
  112 |     std::shared_ptr<Expr> value;
      |                           ^~~~~
C:/megaladon/src/ast/ast.h:110:11: warning:   'Token SetExpr::name' [-Wreorder]
  110 |     Token name; // For property assignment
      |           ^~~~
C:/megaladon/src/ast/ast.h:105:5: warning:   when initialized here [-Wreorder]
  105 |     SetExpr(std::shared_ptr<Expr> object, std::shared_ptr<Expr> index, std::shared_ptr<Expr> value)
      |     ^~~~~~~
In file included from src/interpreter/interpreter.h:7,
                 from src/interpreter/interpreter.cpp:1:
C:/megaladon/src/ast/ast.h: In constructor 'GetExpr::GetExpr(std::shared_ptr<Expr>, std::shared_ptr<Expr>)':
C:/megaladon/src/ast/ast.h:65:27: warning: 'GetExpr::index' will be initialized after [-Wreorder]
   65 |     std::shared_ptr<Expr> index; // For indexed access (e.g., list[idx])
      |                           ^~~~~
C:/megaladon/src/ast/ast.h:64:11: warning:   'Token GetExpr::name' [-Wreorder]
   64 |     Token name; // For property access (e.g., obj.prop)
      |           ^~~~
C:/megaladon/src/ast/ast.h:59:5: warning:   when initialized here [-Wreorder]
   59 |     GetExpr(std::shared_ptr<Expr> object, std::shared_ptr<Expr> index)
      |     ^~~~~~~
C:/megaladon/src/ast/ast.h: In constructor 'SetExpr::SetExpr(std::shared_ptr<Expr>, std::shared_ptr<Expr>, std::shared_ptr<Expr>)':
C:/megaladon/src/ast/ast.h:112:27: warning: 'SetExpr::value' will be initialized after [-Wreorder]
  112 |     std::shared_ptr<Expr> value;
      |                           ^~~~~
C:/megaladon/src/ast/ast.h:110:11: warning:   'Token SetExpr::name' [-Wreorder]
  110 |     Token name; // For property assignment
      |           ^~~~
C:/megaladon/src/ast/ast.h:105:5: warning:   when initialized here [-Wreorder]
  105 |     SetExpr(std::shared_ptr<Expr> object, std::shared_ptr<Expr> index, std::shared_ptr<Expr> value)
      |     ^~~~~~~
src/interpreter/interpreter.cpp: In member function 'virtual MegaladonValue Interpreter::visit(std::shared_ptr<CallExpr>)':
src/interpreter/interpreter.cpp:162:27: warning: comparison of integer expressions of different signedness: 'int' and 'std::vector<MegaladonValue>::size_type' {aka 'long long unsigned int'} [-Wsign-compare]
  162 |     if (function->arity() != arguments.size() && function->arity() != -1) { // -1 for variable arity
      |         ~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
src/lexer/lexer.cpp: In member function 'bool Lexer::isAtEnd() const':
src/lexer/lexer.cpp:38:20: warning: comparison of integer expressions of different signedness: 'const int' and 'std::__cxx11::basic_string<char>::size_type' {aka 'long long unsigned int'} [-Wsign-compare]
   38 |     return current >= source.length();
      |            ~~~~~~~~^~~~~~~~~~~~~~~~~~
src/lexer/lexer.cpp: In member function 'char Lexer::peekNext() const':
src/lexer/lexer.cpp:131:21: warning: comparison of integer expressions of different signedness: 'in' and 'std::__cxx11::basic_string<char>::size_type' {aka 'long long unsigned int'} [-Wsign-compare]
  131 |     if (current + 1 >= source.length()) return '\0';
      |         ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
In file included from src/parser/parser.h:8,
                 from src/parser/parser.cpp:1:
src/parser/../ast/ast.h: In constructor 'GetExpr::GetExpr(std::shared_ptr<Expr>, std::shared_ptr<Expr>)':
src/parser/../ast/ast.h:65:27: warning: 'GetExpr::index' will be initialized after [-Wreorder]
   65 |     std::shared_ptr<Expr> index; // For indexed access (e.g., list[idx])
      |                           ^~~~~
src/parser/../ast/ast.h:64:11: warning:   'Token GetExpr::name' [-Wreorder]
   64 |     Token name; // For property access (e.g., obj.prop)
      |           ^~~~
src/parser/../ast/ast.h:59:5: warning:   when initialized here [-Wreorder]
   59 |     GetExpr(std::shared_ptr<Expr> object, std::shared_ptr<Expr> index)
      |     ^~~~~~~
src/parser/../ast/ast.h: In constructor 'SetExpr::SetExpr(std::shared_ptr<Expr>, std::shared_ptr<Expr>, std::shared_ptr<Expr>)':
src/parser/../ast/ast.h:112:27: warning: 'SetExpr::value' will be initialized after [-Wreorder]
  112 |     std::shared_ptr<Expr> value;
      |                           ^~~~~
src/parser/../ast/ast.h:110:11: warning:   'Token SetExpr::name' [-Wreorder]
  110 |     Token name; // For property assignment
      |           ^~~~
src/parser/../ast/ast.h:105:5: warning:   when initialized here [-Wreorder]
  105 |     SetExpr(std::shared_ptr<Expr> object, std::shared_ptr<Expr> index, std::shared_ptr<Expr> value)
      |     ^~~~~~~
In file included from C:/msys64/mingw64/include/c++/15.1.0/memory:82,
                 from src/parser/parser.h:4:
C:/msys64/mingw64/include/c++/15.1.0/bits/shared_ptr.h: In instantiation of 'std::shared_ptr<_Tp> std::static_pointer_cast(const shared_ptr<_Tp>&) [with _Tp = VarStmt; _Up = ExpressionStmt]':
src/parser/parser.cpp:177:56:   required from here
  177 |         initializer = std::static_pointer_cast<VarStmt>(expressionStatement());
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~
C:/msys64/mingw64/include/c++/15.1.0/bits/shared_ptr.h:702:23: error: invalid 'static_cast' from type 'std::__shared_ptr<ExpressionStmt, __gnu_cxx::_S_atomic>::element_type*' {aka 'ExpressionStmt*'} to type 'std::shared_ptr<VarStmt>::element_type*' {aka 'VarStmt*'}
  702 |       return _Sp(__r, static_cast<typename _Sp::element_type*>(__r.get()));
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from src/parser/parser.h:8,
                 from src/main.cpp:8:
src/parser/../ast/ast.h: In constructor 'GetExpr::GetExpr(std::shared_ptr<Expr>, std::shared_ptr<Expr>)':
src/parser/../ast/ast.h:65:27: warning: 'GetExpr::index' will be initialized after [-Wreorder]
   65 |     std::shared_ptr<Expr> index; // For indexed access (e.g., list[idx])
      |                           ^~~~~
src/parser/../ast/ast.h:64:11: warning:   'Token GetExpr::name' [-Wreorder]
   64 |     Token name; // For property access (e.g., obj.prop)
      |           ^~~~
src/parser/../ast/ast.h:59:5: warning:   when initialized here [-Wreorder]
   59 |     GetExpr(std::shared_ptr<Expr> object, std::shared_ptr<Expr> index)
      |     ^~~~~~~
src/parser/../ast/ast.h: In constructor 'SetExpr::SetExpr(std::shared_ptr<Expr>, std::shared_ptr<Expr>, std::shared_ptr<Expr>)':
src/parser/../ast/ast.h:112:27: warning: 'SetExpr::value' will be initialized after [-Wreorder]
  112 |     std::shared_ptr<Expr> value;
      |                           ^~~~~
src/parser/../ast/ast.h:110:11: warning:   'Token SetExpr::name' [-Wreorder]
  110 |     Token name; // For property assignment
      |           ^~~~
src/parser/../ast/ast.h:105:5: warning:   when initialized here [-Wreorder]
  105 |     SetExpr(std::shared_ptr<Expr> object, std::shared_ptr<Expr> index, std::shared_ptr<Expr> value)
      |     ^~~~~~~

bandi@BS12 MINGW64 /c/megaladon
$
